--- a/pubblications/pubblications.html
+++ b/pubblications/pubblications.html
@@ -11,6 +11,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <title>Mirco Mannino </title>
   </head>
   <body>
@@ -44,7 +49,7 @@
       <div class="container-fluid">
         <div class="row align-items-start p-4 fluid">
           <!-- LEFT SIDE -->
-          <div class="col-sm-3">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-body">
                 <!-- General info -->
@@ -74,7 +79,7 @@
 
 
           <!-- RIGHT SIDE -->
-          <div class="col-sm-9">
+          <div class="col-md-8">
 
             <!-- Pubblications header  -->
             <div class="container">
