Fix responsive content in index.html and pubblications.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="col-md-8">
 
             <!-- About myself -->
-            <div class="container">
+            <div class="container-fluid">
               <h3> About myself </h3>
               <p>
               I'm an italian PhD student in computer engineering. My actual interests are high-performance-computing, parallel-computing and computer architecture.
@@ -93,10 +93,10 @@
             <!-- END About myself -->
 
             <!-- Education -->
-            <div class="container mx-auto mt-5">
+            <div class="container-fluid mx-auto mt-5">
               <h3> Education </h3>
-              <div class="row">
-                <div class="col-sm">
+              <div class="row fluid">
+                <div class="col-xl">
                   <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
                     <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> PhD </span> </br> <span class="education-custom-card-sub-header"> 2021 - present </span> </div>
                     <div class="card-body education-custom-card-body">
@@ -110,7 +110,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl">
                   <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
                     <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> Master's Degree </span> </br> <span class="education-custom-card-sub-header"> 2019 - 2021 </span> </div>
                       <div class="card-body education-custom-card-body">
@@ -121,7 +121,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl">
                   <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
                     <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> Bachelor's Degree </span> </br> <span class="education-custom-card-sub-header"> 2016 - 2019 </span> </div>
                       <div class="card-body education-custom-card-body">
@@ -137,7 +137,7 @@
               <!-- END  Education -->
 
               <!-- Work experience -->
-              <div class="container mx-auto mt-5">
+              <div class="container-fluid mx-auto mt-5">
                   <h3> Work experiences </h3>
 
                   <!-- Internship Aidilab -->
