Add resposive social logos

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container-fluid">
         <div class="row align-items-start p-4 fluid">
           <!-- LEFT SIDE -->
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="card">
               <div class="card-body">
                 <!-- General info -->
@@ -69,8 +69,8 @@
                   <!-- Social -->
                   <div class="container mx-auto mt-4">
                     <h4> Social </h4>
-                    <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="img/logo/linkedin.svg" width="12%"/> </a>
-                    <a href="https://github.com/mircomannino"> <img src="img/logo/github.svg" width="12%"/> </a></br>
+                    <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="img/logo/linkedin.svg" width="30" height="30" class="img-fluid"/> </a>
+                    <a href="https://github.com/mircomannino"> <img src="img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a></br>
                   </div>
                 </div>
               </div>
@@ -79,7 +79,7 @@
 
 
           <!-- RIGHT SIDE -->
-          <div class="col-md-8">
+          <div class="col-lg-8">
 
             <!-- About myself -->
             <div class="container-fluid">
