--- a/pubblications/pubblications.html
+++ b/pubblications/pubblications.html
@@ -69,8 +69,8 @@
                     <!-- Social -->
                     <div class="container mx-auto mt-4">
                       <h4> Social </h4>
-                      <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="../img/logo/linkedin.svg" width="12%"/> </a>
-                      <a href="https://github.com/mircomannino"> <img src="../img/logo/github.svg" width="12%"/> </a></br>
+                      <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="../img/logo/linkedin.svg" width="30" height="30" class="img-fluid"/> </a>
+                      <a href="https://github.com/mircomannino"> <img src="../img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a></br>
                     </div>
                   </div>
                 </div>
