Fix responsive content in pubblications.html

--- a/pubblications/pubblications.html
+++ b/pubblications/pubblications.html
@@ -49,7 +49,7 @@
       <div class="container-fluid">
         <div class="row align-items-start p-4 fluid">
             <!-- LEFT SIDE -->
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="card">
                 <div class="card-body">
                   <!-- General info -->
@@ -79,7 +79,7 @@
 
 
           <!-- RIGHT SIDE -->
-          <div class="col-md-8">
+          <div class="col-lg-8">
 
             <!-- Pubblications header  -->
             <div class="container">
