--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
             <!-- END About myself -->
 
             <!-- Education -->
-            <div class="container-fluid mx-auto mt-5">
+            <div class="container-fluid mx-auto mt-4">
               <h3> Education </h3>
-              <div class="row fluid">
-                <div class="col-xl">
-                  <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
-                    <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> PhD </span> </br> <span class="education-custom-card-sub-header"> 2021 - present </span> </div>
+              <div class="row fluid mt-2">
+                <div class="col-lg">
+                  <div class="card bg-light border-dark h-80">
+                    <div class="card-header border-dark education-custom-card-header"> <span class="education-custom-card-header"> PhD </span> <span class="education-custom-card-sub-header"> [2021 - present] </span> </div>
                     <div class="card-body education-custom-card-body">
-                      <h6 class="card-title">University of Siena, </br> Huawei Technologies R&D (Uk) Ltd </h6>
+                      <h6 class="card-title">University of Siena, Huawei Technologies R&D (Uk) Ltd </h6>
                       <p class="card-text">
                         Integrated HW-SW technologies enabling
                         the development and use of highly
@@ -110,9 +110,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl">
-                  <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
-                    <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> Master's Degree </span> </br> <span class="education-custom-card-sub-header"> 2019 - 2021 </span> </div>
+              </div>
+              <div class="row fluid mt-2">
+                <div class="col-lg">
+                  <div class="card bg-light border-dark h-80">
+                    <div class="card-header border-dark education-custom-card-header"> <span class="education-custom-card-header"> Master's Degree </span> <span class="education-custom-card-sub-header"> [2019 - 2021] </span> </div>
                       <div class="card-body education-custom-card-body">
                         <h6 class="card-title">University of Siena </h6>
                         <p class="card-text">
@@ -121,9 +123,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl">
-                  <div class="card bg-light border-dark mb-3 h-100" style="max-width: 18rem;">
-                    <div class="card-header border-dark text-center education-custom-card-header"> <span class="education-custom-card-header"> Bachelor's Degree </span> </br> <span class="education-custom-card-sub-header"> 2016 - 2019 </span> </div>
+              </div>
+              <div class="row fluid mt-2">
+                <div class="col-lg">
+                  <div class="card bg-light border-dark h-80">
+                    <div class="card-header border-dark education-custom-card-header"> <span class="education-custom-card-header"> Bachelor's Degree </span> <span class="education-custom-card-sub-header"> [2016 - 2019] </span> </div>
                       <div class="card-body education-custom-card-body">
                         <h6 class="card-title">University of Siena </h6>
                         <p class="card-text">
@@ -142,7 +146,7 @@
 
                   <!-- Internship Aidilab -->
                   <div class="card bg-light border-dark mb-3">
-                    <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Aidilab </span> </br> <span class="workexperiences-custom-card-sub-header"> Aug 2019 - Oct 2019 </span> </div>
+                    <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Aidilab </span> <span class="workexperiences-custom-card-sub-header"> [Aug 2019 - Oct 2019] </span> </div>
                       <div class="card-body workexperiences-custom-card-body">
                         <!-- <h6 class="card-title">University of Siena </h6> -->
                         <p class="card-text">
