--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link active" href="./index.hmtl"> Home </a>
+              <a class="nav-link active" href="./index.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Projects </a>
