--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -38,10 +38,10 @@
               <a class="nav-link" href="#"> Posts </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link active" href="./pubblications.html"> Pubblications </a>
+              <a class="nav-link" href="../pubblications/pubblications.html"> Pubblications </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../attendance/attendance.html"> Attendance </a>
+              <a class="nav-link active" href="./attendance.html"> Attendance </a>
             </li>
           </ul>
         </div>
@@ -83,35 +83,28 @@
 
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
+              <!--------------- Pubblications header 2021 ----------------------->
+              <div class="container">
+                <h2> 2022 </h2>
+            </div>
+            <!-------------- END Pubblications header 2021 -------------------->
 
-            <!-- Pubblications header  -->
+            <hr/>
+
+            <!--------------- Pubblications header 2021 ----------------------->
             <div class="container">
-              <h2> Pubblications </h2>
-              <hr>
-              <!-- Pubblications content -->
+              <h2> 2021 </h2>
 
               <!-- Item -->
-              <div class="fluid-container mt-4">
-                <span class="pubblications-number"> [1] </span>
-                <span class="pubblications-author">
-                  F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali
-                </span> ,
-                <span class="pubblications-title">
-                  <a href="https://www.sciencedirect.com/science/article/pii/S1877050921016690">
-                  CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients
-                  </a>
-                </span> ,
-                <span class="pubblications-conference">
-                  25th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, KES 2021 (September 8-10, 2021, Szczecin, Polland).
-                </span>
+              <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                <span class="attendance-name"> <a href="https://mclabservices.di.uniroma1.it/iwes/2021/"> IWES (Italian Workshop on Embedded Systems) 2021 </a> </span> <br/>
+                <span class="attendance-date"> December 9-10 2021, </span>
+                <span class="attendance-venue">Rome </span>
               </div>
               <!-- END item -->
 
-
-              <!-- END Pubblications content -->
-
             </div>
-            <!-- END Pubblications header -->
+            <!-------------- END Pubblications header 2021 -------------------->
 
 
           </div>
