--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./pubblications/pubblications.html"> Pubblications </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./attendance/attendance.html"> Attendance </a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -56,7 +59,7 @@
                 <div> <img src="img/Photo.png" class="rounded-circle mx-auto d-block img-fluid"> </div>
                   <div class="container mx-auto m-4">
                     <h3> Mirco Mannino </h3>
-                    PhD student </br>
+                    PhD student <br/>
                     <span style="color: gray"> University of Siena </span>
                   </div>
 
@@ -70,7 +73,7 @@
                   <div class="container mx-auto mt-4">
                     <h4> Social </h4>
                     <a href="https://www.linkedin.com/in/mirco-mannino-023787174/"> <img src="img/logo/linkedin.svg" width="30" height="30" class="img-fluid"/> </a>
-                    <a href="https://github.com/mircomannino"> <img src="img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a></br>
+                    <a href="https://github.com/mircomannino"> <img src="img/logo/github.svg" width="30", height="30" class="img-fluid"/> </a><br/>
                   </div>
                 </div>
               </div>
