Fix publications url

--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#"> Posts </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="../pubblications/pubblications.html"> Pubblications </a>
+              <a class="nav-link" href="../publications/publications.html"> Publications </a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="./attendance.html"> Attendance </a>
@@ -83,15 +83,15 @@
 
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
-              <!--------------- Pubblications header 2021 ----------------------->
+              <!--------------- Attendance header 2021 ----------------------->
               <div class="container">
                 <h2> 2022 </h2>
             </div>
-            <!-------------- END Pubblications header 2021 -------------------->
+            <!-------------- END Attendance header 2021 -------------------->
 
             <hr/>
 
-            <!--------------- Pubblications header 2021 ----------------------->
+            <!--------------- Attendance header 2021 ----------------------->
             <div class="container">
               <h2> 2021 </h2>
 
@@ -104,7 +104,7 @@
               <!-- END item -->
 
             </div>
-            <!-------------- END Pubblications header 2021 -------------------->
+            <!-------------- END Attendance header 2021 -------------------->
 
 
           </div>
