--- a/publications/publications.html
+++ b/publications/publications.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#"> Posts </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link active" href="./pubblications.html"> Pubblications </a>
+              <a class="nav-link active" href="./publications.html"> Publications </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../attendance/attendance.html"> Attendance </a>
@@ -84,34 +84,34 @@
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
 
-            <!-- Pubblications header  -->
+            <!-- Publications header  -->
             <div class="container">
-              <h2> Pubblications </h2>
+              <h2> Publications </h2>
               <hr>
-              <!-- Pubblications content -->
+              <!-- Publications content -->
 
               <!-- Item -->
               <div class="fluid-container mt-4">
-                <span class="pubblications-number"> [1] </span>
-                <span class="pubblications-author">
+                <span class="publications-number"> [1] </span>
+                <span class="publications-author">
                   F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali
                 </span> ,
-                <span class="pubblications-title">
+                <span class="publications-title">
                   <a href="https://www.sciencedirect.com/science/article/pii/S1877050921016690">
                   CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients
                   </a>
                 </span> ,
-                <span class="pubblications-conference">
+                <span class="publications-conference">
                   25th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, KES 2021 (September 8-10, 2021, Szczecin, Polland).
                 </span>
               </div>
               <!-- END item -->
 
 
-              <!-- END Pubblications content -->
+              <!-- END Publications content -->
 
             </div>
-            <!-- END Pubblications header -->
+            <!-- END Publications header -->
 
 
           </div>
