--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#"> Posts </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="./pubblications/pubblications.html"> Pubblications </a>
+              <a class="nav-link" href="./publications/publications.html"> Publications </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./attendance/attendance.html"> Attendance </a>
