Add Spring 2022 RISCV week poster in publications

--- a/publications/publications.html
+++ b/publications/publications.html
@@ -91,23 +91,41 @@
               <hr>
               <!-- Publications content -->
 
-              <!-- Item -->
+              <!-- Item N.2 -->
               <div class="fluid-container mt-4">
-                <span class="publications-number"> [1] </span>
-                <span class="publications-author">
-                  F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali
-                </span> ,
+                <span class="publications-number"> [2] [POSTER] </span>
                 <span class="publications-title">
-                  <a href="https://www.sciencedirect.com/science/article/pii/S1877050921016690">
-                  CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients
-                  </a>
-                </span> ,
-                <span class="publications-conference">
-                  25th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, KES 2021 (September 8-10, 2021, Szczecin, Polland).
+                  <b> Direct Convolution: Performance Effects of Loops Ordering and Parallelization </b>b
+                </span> <br/>
+                <span class="publications-author">
+                  <b> M. Mannino, </b> A. Mondelli, S. Bartolini.
                 </span>
+                <span class="publications-conference">
+                  <a href="https://open-src-soc.org/2022-05/index.html">
+                    Spring 2022 RISC-V Week  
+                  </a>
+                </span> <br/>
+                <a class="pub-link" target="_blank" href="./pdf/2_abstract.pdf"> PDF-abstract </a>
+                <a class="pub-link" target="_blank" href="./pdf/2_poster.pdf"> PDF-poster </a>
               </div>
               <!-- END item -->
 
+              <!-- Item N.1 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [1] </span>
+                <span class="publications-title">
+                  <b> CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients </b>
+                </span> <br/>
+                <span class="publications-author">
+                  F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali. 
+                </span>
+                <span class="publications-conference">
+                  25th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, KES 2021 (September 8-10, 2021, Szczecin, Polland).
+                </span> <br/>
+                <a class="pub-link" target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1877050921016690"> WEB </a>
+                <a class="pub-link" target="_blank" href="./pdf/1.pdf"> PDF </a>
+              </div>
+              <!-- END item -->
 
               <!-- END Publications content -->
 
