--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -87,6 +87,14 @@
               <!--------------- Attendance header 2021 ----------------------->
               <div class="container">
                 <h2> 2022 </h2>
+
+                  <!-- Item -->
+                <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                  <span class="attendance-name"> <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a> </span> <br/>
+                  <span class="attendance-date"> May 3-5 2022, </span>
+                  <span class="attendance-venue">Paris </span>
+                </div>
+                <!-- END item -->
             </div>
             <!-------------- END Attendance header 2021 -------------------->
 
