--- a/publications/publications.html
+++ b/publications/publications.html
@@ -101,9 +101,8 @@
                   <b> M. Mannino, </b> A. Mondelli, S. Bartolini.
                 </span>
                 <span class="publications-conference">
-                  <a href="https://open-src-soc.org/2022-05/index.html">
-                    Spring 2022 RISC-V Week  
-                  </a>
+                  <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a>
+                  (May 3-5, 2022, Paris, France).
                 </span> <br/>
                 <a class="pub-link" target="_blank" href="./pdf/2_abstract.pdf"> PDF-abstract </a>
                 <a class="pub-link" target="_blank" href="./pdf/2_poster.pdf"> PDF-poster </a>
