--- a/publications/publications.html
+++ b/publications/publications.html
@@ -91,6 +91,23 @@
               <hr>
               <!-- Publications content -->
 
+              <!-- Item N.3 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [2] [POSTER] </span>
+                <span class="publications-title">
+                  <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>b
+                </span> <br/>
+                <span class="publications-author">
+                  Biagio Peccerillo, <b> Mirco Mannino </b>, Andrea Mondelli, Sandro Bartolini
+                </span>
+                <span class="publications-conference">
+                  Journal of Systems Architecture, Volume 129, August 2022, 102561
+                </span> <br/>
+                <a class="pub-link" target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1383762122001138"> WEB </a>
+                <a class="pub-link" target="_blank" href="https://pdf.sciencedirectassets.com/271017/1-s2.0-S1383762122X00076/1-s2.0-S1383762122001138/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEGUaCXVzLWVhc3QtMSJGMEQCIBdTNgQAOhhlo5tlh5py81iEL3%2BmN8%2F314%2F2KQ4OGz7IAiAOXrOBxMfHQjT2sAKtQ73%2FHdDJXdqZtC58qwN%2B61a03yrSBAh%2BEAQaDDA1OTAwMzU0Njg2NSIMGQ2JIdGzM6oXHDxaKq8EfQAbBnIZTvSI2bB0eZXxpLaxFVxP21FV54simaUa%2B0DlQ8bdIrs0O7kUSHS3I9x7IM8hq4pU%2FktQXeScNQUr38VefClV4OAuuy05p7nPKVJLFyNZBwplrDW62UPiDsYXn67PHK1SuUjBsgE0%2B2pO5n1vp4%2FZuwHe8WxJglwyVLAksQi%2FyHorDY%2FEtqBMShqWCSalbtIcryRViIsNYl6oPfOObIqsiMHKqaWcUpLuaigSN%2BtVJ66YoE%2B%2BZ1RK6U09pUqOrW1STpjoDmtOtTczOU2RUX8WoHu6IoATZRyl930ETlfEdIVT8lv8nJoH7lP4oGgE4L5INO7IYoSy6CwB6pbOXR%2B%2FQW8UlJz7zymB9pIGCuWPDllgxPXMNAsUfzJ3dJtUPojw9YjQHKkyIU4zp2CCcQFaQhQO8BRCjAWEK91hJ%2BxtuPIymDx%2FOoVDEseDHb%2FdfXnK61hReymzwxg1GxjiBXAE0C5moqHYDUHNvGu4kTWgwC%2B6yTxQOp%2B3ed4WRGc66NgThffEe2p3tWH9wC8ZpE8OjHq6oes4a4oVv7wBMlWRFAcW40QMTyE398oj8qbf5peSXM6RiaPF%2BNqIqFHgsoznmElD%2BG1gU4NYMMU9tZiIoLo9vk9tYouLI%2Bo9EL7SjKnVjuSk%2FWUc8kH3KbbI%2FFKwiJfBBgMSAMZrjOHsNjMt4j1o0US5PJK0KI2UqFWpoi3ro5sh5i9uy4ktOGNJjAPCCS6h1SXJf5%2B1aTCll9OVBjqqAWMrB%2BDoYqwMqHpYWDjKO3ntgRPmlNbOl53J7Vk%2BRjsgHBD8Yv1yMI8HlV3go8ZIrDd6M%2Bc9MrWgYWQWedCMlTnmDIB2HLkgEJSrzInWS10pAcdjj2bY%2BXOZkuVzD68Hxm6eHF6wZub%2BDrAaleIEMtK0t2Jo0FZJOPmWXqH%2FIBw8abNNnZXoDL139eL%2Fyb9uEYF7hoWBcfIzScc9CvPc27BpXdyMi5ZmeH8l&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220623T210642Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYXD2CAYXE%2F20220623%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=992c108053cec42da29c2030823c50ec998848161f38cc072dbf624cd9220834&hash=99155bb2e070d0f40d2c41433b6e5e5b22d7261c8ad1e973c96eef932293ee8d&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S1383762122001138&tid=spdf-4d19dd87-d046-4f74-a4af-c6ff657e6b94&sid=d618b8181943f64b84894384cad00245be2bgxrqb&type=client&ua=525251575552575454&rr=720030655d32baa3"> PDF </a>
+              </div>
+              <!-- END item -->
+
               <!-- Item N.2 -->
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [2] [POSTER] </span>
