--- a/publications/publications.html
+++ b/publications/publications.html
@@ -93,7 +93,7 @@
 
               <!-- Item N.3 -->
               <div class="fluid-container mt-4">
-                <span class="publications-number"> [2] [POSTER] </span>
+                <span class="publications-number"> [3] </span>
                 <span class="publications-title">
                   <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>b
                 </span> <br/>
