--- a/publications/publications.html
+++ b/publications/publications.html
@@ -98,7 +98,7 @@
                   <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>b
                 </span> <br/>
                 <span class="publications-author">
-                  Biagio Peccerillo, <b> Mirco Mannino </b>, Andrea Mondelli, Sandro Bartolini
+                  Biagio Peccerillo, <b> Mirco Mannino </b>, Andrea Mondelli, Sandro Bartolini.
                 </span>
                 <span class="publications-conference">
                   Journal of Systems Architecture, Volume 129, August 2022, 102561
