Fix Spring RISCV

--- a/publications/publications.html
+++ b/publications/publications.html
@@ -112,7 +112,7 @@
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [2] [POSTER] </span>
                 <span class="publications-title">
-                  <b> Direct Convolution: Performance Effects of Loops Ordering and Parallelization </b>b
+                  <b> Direct Convolution: Performance Effects of Loops Ordering and Parallelization </b>
                 </span> <br/>
                 <span class="publications-author">
                   <b> M. Mannino, </b> A. Mondelli, S. Bartolini.
