--- a/publications/publications.html
+++ b/publications/publications.html
@@ -95,7 +95,7 @@
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [3] </span>
                 <span class="publications-title">
-                  <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>b
+                  <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>
                 </span> <br/>
                 <span class="publications-author">
                   Biagio Peccerillo, <b> Mirco Mannino </b>, Andrea Mondelli, Sandro Bartolini.
