--- a/projects/projects.html
+++ b/projects/projects.html
@@ -31,8 +31,8 @@
             <li class="nav-item">
               <a class="nav-link" href="../index.html"> Home </a>
             </li>
-            <li class="nav-item active" >
-              <a class="nav-link" href="./projects.html"> Projects </a>
+            <li class="nav-item" >
+              <a class="nav-link active" href="./projects.html"> Projects </a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#"> Posts </a>
@@ -98,9 +98,9 @@
 
               <!-- Item N.1 -->
               <div class="fluid-container ">
-                <span class="projects-title"> RISCV Verilog description </span> </br>
-                <div class="row align-items-start fluid">
-                    <div class="col-lg-6">
+                  <div class="row align-items-start fluid">
+                      <div class="col-lg-6">
+                        <span class="projects-title"> RISCV Verilog description </span> </br>
                         <span class="projects-description">
                             A Verilog description of a RISCV datapath. The project was the 
                             final assignment of <a target="_blank" 
@@ -123,6 +123,33 @@
               </div>
               <hr>
               <!-- END Item N.1 -->
+
+              <!-- Item N.2 -->
+              <div class="fluid-container ">
+                  <div class="row align-items-start fluid">
+                      <div class="col-lg-6">
+                        <span class="projects-title"> Abandoned Luggage Detection </span> </br>
+                        <span class="projects-description">
+                            OpenCV implementation of a system that can detect 
+                            abandoned luggage from a scene. The algorithm is implemented 
+                            in Python and it uses Detectron2 model for object detection.
+                        </span> </br> 
+                        <!-- GitHub button -->
+                        <div class="container mt-2 p-0">
+                            <a href="https://github.com/mircomannino/Abandoned-luggage-detection" target="_blank"
+                            class="projects-link">
+                            <img src="../img/logo/github.svg" width="30", height="30" class="img-fluid"/>
+                             GitHub repository 
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="./img/abandoned_luggage_detection.png" class="img-thumbnail">
+                    </div>
+                </div>                
+              </div>
+              <hr>
+              <!-- END Item N.2 -->
 
 
             
