--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="../index.html"> Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link inactive" href="#"> Projects </a>
+              <a class="nav-link inactive" href="./projects/projects.html"> Projects </a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#"> Posts </a>
