--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" href="./index.html"> Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> Projects </a>
+              <a class="nav-link" href="./projects/projects.html"> Projects </a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#"> Posts </a>
