--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -84,11 +84,27 @@
 
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
-              <!--------------- Attendance header 2021 ----------------------->
+              <!--------------- Attendance header 2022 ----------------------->
               <div class="container">
-                <h2> 2022 </h2>
+                <h2> 2023 </h2>
 
                   <!-- Item -->
+                  <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                    <span class="attendance-name"> <a href="https://www.hipeac.net/2023/toulouse/"> HiPEAC 2023 Conference </a> </span> <br/>
+                    <span class="attendance-date"> Jan 16-18 2023, </span>
+                    <span class="attendance-venue"> Toulouse </span>
+                  </div>
+                <!-- END item -->
+              </div>
+          <!-------------- END Attendance header 2022 -------------------->
+
+          <hr/>
+
+            <!--------------- Attendance header 2022 ----------------------->
+            <div class="container">
+              <h2> 2022 </h2>
+
+                <!-- Item -->
                 <div class="fluid-container mt-2 p-2 border border-2 border-dark">
                   <span class="attendance-name"> <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a> </span> <br/>
                   <span class="attendance-date"> May 3-5 2022, </span>
@@ -96,7 +112,7 @@
                 </div>
                 <!-- END item -->
             </div>
-            <!-------------- END Attendance header 2021 -------------------->
+            <!-------------- END Attendance header 2022 -------------------->
 
             <hr/>
 
