--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
               <div class="container-fluid mx-auto mt-5">
                   <h3> Work experiences </h3>
 
+                  <!-- Internship Huawei -->
+                  <div class="card bg-light border-dark mb-3">
+                    <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Huawei Technologies R&D (UK) </span> <span class="workexperiences-custom-card-sub-header"> [Mar 2023 - Sep 2023] </span> </div>
+                      <div class="card-body workexperiences-custom-card-body">
+                        <!-- <h6 class="card-title">University of Siena </h6> -->
+                        <p class="card-text">
+                            Main tasks: CPU Architect Intern
+                        </p>
+                    </div>
+                  </div>
+
                   <!-- Internship Aidilab -->
                   <div class="card bg-light border-dark mb-3">
                     <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Aidilab </span> <span class="workexperiences-custom-card-sub-header"> [Aug 2019 - Oct 2019] </span> </div>
