--- a/publications/publications.html
+++ b/publications/publications.html
@@ -91,6 +91,40 @@
               <hr>
               <!-- Publications content -->
 
+              <!-- Item N.5 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [5] </span>
+                <span class="publications-title">
+                  <b> Energy and Performance Improvements for Convolutional Accelerators Using Lightweight Address Translation Support </b>
+                </span> <br/>
+                <span class="publications-author">
+                  <b> M. Mannino </b>, B. Peccerillo, A. Mondelli, S. Bartolini.
+                  <br/>
+                </span>
+                <span class="publications-conference">
+                  Proceedings of the 20th ACM International Conference on Computing Frontiers. 2023
+                </span> <br/>
+                <a class="pub-link" target="_blank" href=""> WEB </a>
+              </div>
+              <!-- END item -->
+
+              <!-- Item N.4 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [4] </span>
+                <span class="publications-title">
+                  <b> IXIAM: ISA EXtension for Integrated Accelerator Management </b>
+                </span> <br/>
+                <span class="publications-author">
+                  B. Peccerillo, E. Cheshmikhani, <b> M. Mannino </b>, A. Mondelli, S. Bartolini.
+                  <br/>
+                </span>
+                <span class="publications-conference">
+                  IEEE Access, 2023
+                </span> <br/>
+                <a class="pub-link" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10091506"> WEB </a>
+              </div>
+              <!-- END item -->
+
               <!-- Item N.3 -->
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [3] </span>
@@ -98,7 +132,8 @@
                   <b> A survey on hardware accelerators: Taxonomy, trends, challenges, and perspectives </b>
                 </span> <br/>
                 <span class="publications-author">
-                  Biagio Peccerillo, <b> Mirco Mannino </b>, Andrea Mondelli, Sandro Bartolini.
+                  B. Peccerillo, <b> M. Mannino </b>, A. Mondelli, S. Bartolini.
+                  <br/>
                 </span>
                 <span class="publications-conference">
                   Journal of Systems Architecture, Volume 129, August 2022, 102561
@@ -116,6 +151,7 @@
                 </span> <br/>
                 <span class="publications-author">
                   <b> M. Mannino, </b> A. Mondelli, S. Bartolini.
+                  <br/>
                 </span>
                 <span class="publications-conference">
                   <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a>
@@ -133,7 +169,8 @@
                   <b> CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients </b>
                 </span> <br/>
                 <span class="publications-author">
-                  F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali. 
+                  F. Guerranti, <b> M. Mannino </b>, F. Baccini, P. Bongini, N. Pancino, A. Visibelli, S. Marziali.
+                  <br/>
                 </span>
                 <span class="publications-conference">
                   25th International Conference on Knowledge-Based and Intelligent Information & Engineering Systems, KES 2021 (September 8-10, 2021, Szczecin, Polland).
