--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -84,9 +84,17 @@
 
           <!-- RIGHT SIDE -->
           <div class="col-lg-8">
-              <!--------------- Attendance header 2022 ----------------------->
+              <!--------------- Attendance header 2023 ----------------------->
               <div class="container">
                 <h2> 2023 </h2>
+
+                  <!-- Item -->
+                  <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                    <span class="attendance-name"> <a href="https://www.computingfrontiers.org/2023/"> Computing Frontiers 2022 Conference </a> </span> <br/>
+                    <span class="attendance-date"> May 09-11 2023, </span>
+                    <span class="attendance-venue"> Bologna </span>
+                  </div>
+                  <!-- END item -->
 
                   <!-- Item -->
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
@@ -96,7 +104,7 @@
                   </div>
                 <!-- END item -->
               </div>
-          <!-------------- END Attendance header 2022 -------------------->
+          <!-------------- END Attendance header 2023 -------------------->
 
           <hr/>
 
