--- a/publications/publications.html
+++ b/publications/publications.html
@@ -91,6 +91,23 @@
               <hr>
               <!-- Publications content -->
 
+              <!-- Item N.6 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [6] </span>
+                <span class="publications-title">
+                  <b> Analysis and Optimization of Direct Convolution Execution on Multi-Core Processors </b>
+                </span> <br/>
+                <span class="publications-author">
+                  <b> M. Mannino </b>, B. Peccerillo, A. Mondelli, S. Bartolini.
+                  <br/>
+                </span>
+                <span class="publications-conference">
+                  IEEE Access. 2023
+                </span> <br/>
+                <a class="pub-link" target="_blank" href=""> WEB </a>
+              </div>
+              <!-- END item -->
+
               <!-- Item N.5 -->
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [5] </span>
