--- a/publications/publications.html
+++ b/publications/publications.html
@@ -104,7 +104,7 @@
                 <span class="publications-conference">
                   IEEE Access. 2023
                 </span> <br/>
-                <a class="pub-link" target="_blank" href=""> WEB </a>
+                <a class="pub-link" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10144741"> WEB </a>
               </div>
               <!-- END item -->
 
