--- a/index.html
+++ b/index.html
@@ -89,15 +89,50 @@
             <div class="container-fluid">
               <h3> About myself </h3>
               <p>
-              I'm an italian PhD student in computer engineering. My actual interests are high-performance-computing, parallel-computing and computer architecture.
-              I also like to take a look at what's going on in the world of artificial intelligence,  not only because it's interesting but also because there's a need to accelerate that as well.
+              I'm a PhD student in computer engineering at <a=href=""> University of Siena </a>. 
+              My research interests encompass optimizing deep learning algorithms, parallel computing, 
+              and hardware accelerators, focusing on their integration into systems. 
+              Main part of the integration I am dealing with concerns the virtual memory subsystem. </br> </br>
+              
+              
               In my spare time, I coach a team of young basketball players (5-6 years old) at <a href="https://www.facebook.com/valdelsabasket"> Valdelsa Basket </a>
               </p>
             </div>
             <!-- END About myself -->
 
-            <!-- Education -->
+            <!-- Work experience -->
             <div class="container-fluid mx-auto mt-4">
+              <h3> Work experience </h3>
+
+              <!-- Internship Huawei -->
+              <div class="card bg-light border-dark mb-4">
+                <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Huawei Technologies R&D (UK) </span> <span class="workexperiences-custom-card-sub-header"> [Mar 2023 - Sep 2023] </span> </div>
+                  <div class="card-body workexperiences-custom-card-body">
+                    <!-- <h6 class="card-title">University of Siena </h6> -->
+                    <p class="card-text">
+                        Main tasks: CPU Architect Intern
+                    </p>
+                </div>
+              </div>
+
+              <!-- Internship Aidilab -->
+              <div class="card bg-light border-dark mb-3">
+                <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Aidilab </span> <span class="workexperiences-custom-card-sub-header"> [Aug 2019 - Oct 2019] </span> </div>
+                  <div class="card-body workexperiences-custom-card-body">
+                    <!-- <h6 class="card-title">University of Siena </h6> -->
+                    <p class="card-text">
+                        Main tasks: Upgrading the UDOO-Neo cards operating system from
+                        a version based on Ubuntu 14 to one based on Ubuntu 18 link.
+                        <a href="https://github.com/mircomannino/mkudoobuntu18_04"> GitHub repository </a>
+                    </p>
+                </div>
+              </div>
+              <!-- END Internship Aidiliab -->
+
+          <!-- Work experiences -->
+
+            <!-- Education -->
+            <div class="container-fluid mx-auto mt-5 p-0">
               <h3> Education </h3>
               <div class="row fluid mt-2">
                 <div class="col-lg">
@@ -143,37 +178,6 @@
               </div>
               </div>
               <!-- END  Education -->
-
-              <!-- Work experience -->
-              <div class="container-fluid mx-auto mt-5">
-                  <h3> Work experiences </h3>
-
-                  <!-- Internship Huawei -->
-                  <div class="card bg-light border-dark mb-3">
-                    <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Huawei Technologies R&D (UK) </span> <span class="workexperiences-custom-card-sub-header"> [Mar 2023 - Sep 2023] </span> </div>
-                      <div class="card-body workexperiences-custom-card-body">
-                        <!-- <h6 class="card-title">University of Siena </h6> -->
-                        <p class="card-text">
-                            Main tasks: CPU Architect Intern
-                        </p>
-                    </div>
-                  </div>
-
-                  <!-- Internship Aidilab -->
-                  <div class="card bg-light border-dark mb-3">
-                    <div class="card-header border-dark workexperiences-custom-card-header"> <span class="workexperiences-custom-card-header"> Internship at Aidilab </span> <span class="workexperiences-custom-card-sub-header"> [Aug 2019 - Oct 2019] </span> </div>
-                      <div class="card-body workexperiences-custom-card-body">
-                        <!-- <h6 class="card-title">University of Siena </h6> -->
-                        <p class="card-text">
-                            Main tasks: Upgrading the UDOO-Neo cards operating system from
-                            a version based on Ubuntu 14 to one based on Ubuntu 18 link.
-                            <a href="https://github.com/mircomannino/mkudoobuntu18_04"> GitHub repository </a>
-                        </p>
-                    </div>
-                  </div>
-                  <!-- END Internship Aidiliab -->
-
-              <!-- Work experiences -->
 
             </div>
             <!-- END RIGHT SIDE -->
