--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="container-fluid">
               <h3> About myself </h3>
               <p>
-              I'm a PhD student in computer engineering at <a=href=""> University of Siena </a>. 
+              I'm a PhD student in computer engineering at <a href="https://www.diism.unisi.it/it"> University of Siena </a>. 
               My research interests encompass optimizing deep learning algorithms, parallel computing, 
               and hardware accelerators, focusing on their integration into systems. 
               Main part of the integration I am dealing with concerns the virtual memory subsystem. </br> </br>
