Add CF23 paper link

--- a/publications/publications.html
+++ b/publications/publications.html
@@ -121,7 +121,7 @@
                 <span class="publications-conference">
                   Proceedings of the 20th ACM International Conference on Computing Frontiers. 2023
                 </span> <br/>
-                <a class="pub-link" target="_blank" href=""> WEB </a>
+                <a class="pub-link" target="_blank" href="https://dl.acm.org/doi/10.1145/3587135.3592208"> WEB </a>
               </div>
               <!-- END item -->
 
