--- a/attendance/attendance.html
+++ b/attendance/attendance.html
@@ -90,9 +90,17 @@
 
                   <!-- Item -->
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
+                    <span class="attendance-name"> <a href="https://www.imperial.ac.uk/hipeds-centre/workshops/nanda-2023/"> Novel Architecture and Novel Design Automation Workshop </a> </span> <br/>
+                    <span class="attendance-date"> Sep 11-12 2023, </span>
+                    <span class="attendance-venue"> London, UK </span>
+                  </div>
+                  <!-- END item -->
+
+                  <!-- Item -->
+                  <div class="fluid-container mt-2 p-2 border border-2 border-dark">
                     <span class="attendance-name"> <a href="https://www.computingfrontiers.org/2023/"> Computing Frontiers 2023 Conference </a> </span> <br/>
                     <span class="attendance-date"> May 09-11 2023, </span>
-                    <span class="attendance-venue"> Bologna </span>
+                    <span class="attendance-venue"> Bologna, IT</span>
                   </div>
                   <!-- END item -->
 
@@ -100,7 +108,7 @@
                   <div class="fluid-container mt-2 p-2 border border-2 border-dark">
                     <span class="attendance-name"> <a href="https://www.hipeac.net/2023/toulouse/"> HiPEAC 2023 Conference </a> </span> <br/>
                     <span class="attendance-date"> Jan 16-18 2023, </span>
-                    <span class="attendance-venue"> Toulouse </span>
+                    <span class="attendance-venue"> Toulouse, FR </span>
                   </div>
                 <!-- END item -->
               </div>
@@ -116,7 +124,7 @@
                 <div class="fluid-container mt-2 p-2 border border-2 border-dark">
                   <span class="attendance-name"> <a href="https://open-src-soc.org/2022-05/index.html"> Spring 2022 RISC-V Week </a> </span> <br/>
                   <span class="attendance-date"> May 3-5 2022, </span>
-                  <span class="attendance-venue">Paris </span>
+                  <span class="attendance-venue">Paris, FR</span>
                 </div>
                 <!-- END item -->
             </div>
@@ -132,7 +140,7 @@
               <div class="fluid-container mt-2 p-2 border border-2 border-dark">
                 <span class="attendance-name"> <a href="https://mclabservices.di.uniroma1.it/iwes/2021/"> IWES (Italian Workshop on Embedded Systems) 2021 </a> </span> <br/>
                 <span class="attendance-date"> December 9-10 2021, </span>
-                <span class="attendance-venue">Rome </span>
+                <span class="attendance-venue">Rome, IT </span>
               </div>
               <!-- END item -->
 
