--- a/publications/publications.html
+++ b/publications/publications.html
@@ -34,9 +34,9 @@
             <li class="nav-item">
               <a class="nav-link inactive" href="../projects/projects.html"> Projects </a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#"> Posts </a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="../posts/posts.html"> Posts </a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active" href="./publications.html"> Publications </a>
             </li>
