Add rapido paper

--- a/publications/publications.html
+++ b/publications/publications.html
@@ -91,6 +91,23 @@
               <hr>
               <!-- Publications content -->
 
+              <!-- Item N.7 -->
+              <div class="fluid-container mt-4">
+                <span class="publications-number"> [7] </span>
+                <span class="publications-title">
+                  <b> Integration of RISC-V Page Table Walk in gem5 SE Mode </b>
+                </span> <br/>
+                <span class="publications-author">
+                  <b> M. Mannino </b>, Y. Huang, B. Peccerillo, A. Medaglini, S. Bartolini.
+                  <br/>
+                </span>
+                <span class="publications-conference">
+                  Proceedings of the 16th Workshop on Rapid Simulation and Performance Evaluation for Design Optimization: Methods and Tools (RAPIDO'24). 2024
+                </span> <br/>
+                <a class="pub-link" target="_blank" href=""> WEB </a>
+              </div>
+              <!-- END item -->
+
               <!-- Item N.6 -->
               <div class="fluid-container mt-4">
                 <span class="publications-number"> [6] </span>
