--- a/publications/publications.html
+++ b/publications/publications.html
@@ -105,6 +105,7 @@
                   Proceedings of the 16th Workshop on Rapid Simulation and Performance Evaluation for Design Optimization: Methods and Tools (RAPIDO'24). 2024
                 </span> <br/>
                 <a class="pub-link" target="_blank" href=""> WEB </a>
+                <a class="pub-link" target="_blank" href="https://github.com/mircomannino/gem5/tree/rapido24"> Source code (GitHub) </a>
               </div>
               <!-- END item -->
 
